--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Фінансовий блог</title>
+  <!-- підключення style.css -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,8 +23,8 @@
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
           <h3>Фінансова грамотність</h3>
-          <p>Розберіться, як працюють гроші, щоб жити впевнено.</p>
-          <a href="article1.html">Читати</a>
+          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+          <a class="btn" href="article1.html">Читати</a>
         </div>
       </article>
 
@@ -31,9 +32,9 @@
       <article class="card">
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
-          <h3>Як планувати бюджет</h3>
-          <p>Навчіться правильно витрачати.</p>
-          <a href="article2.html">Читати</a>
+          <h3>Як планувати бюджет ефективно</h3>
+          <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
+          <a class="btn" href="article2.html">Читати</a>
         </div>
       </article>
 
@@ -41,9 +42,9 @@
       <article class="card">
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
-          <h3>Інвестування</h3>
-          <p>Почніть без великих ризиків.</p>
-          <a href="article3.html">Читати</a>
+          <h3>Інвестування для початківців</h3>
+          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
+          <a class="btn" href="article3.html">Читати</a>
         </div>
       </article>
 
@@ -52,8 +53,8 @@
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
           <h3>Фінансова подушка</h3>
-          <p>Захист для будь-кого.</p>
-          <a href="article4.html">Читати</a>
+          <p>Стратегія фінансового захисту для будь-кого.</p>
+          <a class="btn" href="article4.html">Читати</a>
         </div>
       </article>
 
@@ -61,9 +62,9 @@
       <article class="card">
         <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
         <div class="content">
-          <h3>Економія грошей</h3>
-          <p>Лайфхаки без втрати якості.</p>
-          <a href="article5.html">Читати</a>
+          <h3>Топ поради для економії грошей</h3>
+          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
+          <a class="btn" href="article5.html">Читати</a>
         </div>
       </article>
 
