--- a/index.html
+++ b/index.html
@@ -1,74 +1,66 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Фінансовий блог</title>
-  <!-- підключення style.css -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- HERO -->
-  <header class="hero">
-    <h1>Фінансовий блог</h1>
-    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-  </header>
+  <div class="wrap">
+    <section class="hero">
+      <h1>Фінансовий блог</h1>
+      <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+    </section>
 
-  <!-- КАРТКИ -->
-  <main class="wrap">
     <section class="cards">
-
-      <!-- 1 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80');"></div>
+      <!-- Верхні 3 -->
+      <div class="card">
+        <div class="media" style="background-image:url('images/money1.jpg');"></div>
         <div class="content">
           <h3>Фінансова грамотність</h3>
           <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-          <a class="btn" href="article1.html">Читати</a>
+          <a href="#">Читати</a>
         </div>
-      </article>
+      </div>
 
-      <!-- 2 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
+      <div class="card">
+        <div class="media" style="background-image:url('images/money2.jpg');"></div>
         <div class="content">
           <h3>Як планувати бюджет ефективно</h3>
           <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
-          <a class="btn" href="article2.html">Читати</a>
+          <a href="#">Читати</a>
         </div>
-      </article>
+      </div>
 
-      <!-- 3 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
+      <div class="card">
+        <div class="media" style="background-image:url('images/invest.jpg');"></div>
         <div class="content">
           <h3>Інвестування для початківців</h3>
           <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
-          <a class="btn" href="article3.html">Читати</a>
+          <a href="#">Читати</a>
         </div>
-      </article>
+      </div>
 
-      <!-- 4 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
+      <!-- Нижні 2 -->
+      <div class="card big">
+        <div class="media" style="background-image:url('images/safe.jpg');"></div>
         <div class="content">
           <h3>Фінансова подушка</h3>
           <p>Стратегія фінансового захисту для будь-кого.</p>
-          <a class="btn" href="article4.html">Читати</a>
+          <a href="#">Читати</a>
         </div>
-      </article>
+      </div>
 
-      <!-- 5 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
+      <div class="card big">
+        <div class="media" style="background-image:url('images/save.jpg');"></div>
         <div class="content">
           <h3>Топ поради для економії грошей</h3>
           <p>Лайфхаки, як економити і не втрачати якість життя.</p>
-          <a class="btn" href="article5.html">Читати</a>
+          <a href="#">Читати</a>
         </div>
-      </article>
-
+      </div>
     </section>
-  </main>
+  </div>
 </body>
 </html>
