--- a/index.html
+++ b/index.html
@@ -1,73 +1,71 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Фінансовий блог</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- HERO -->
-  <header class="hero">
+
+  <!-- Заголовок -->
+  <section class="hero">
     <h1>Фінансовий блог</h1>
     <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-  </header>
+  </section>
 
-  <!-- КАРТКИ -->
-  <main class="wrap">
-    <section class="cards">
+  <!-- Картки -->
+  <section class="cards">
+    <!-- 1 -->
+    <div class="card">
+      <div class="media" style="background-image: url('images/finance.jpg');"></div>
+      <div class="content">
+        <h3>Фінансова грамотність</h3>
+        <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+        <a href="fin-gramotnist.html">Читати</a>
+      </div>
+    </div>
 
-      <!-- 1 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=800&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова грамотність</h3>
-          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-          <a href="article1.html">Читати</a>
-        </div>
-      </article>
+    <!-- 2 -->
+    <div class="card">
+      <div class="media" style="background-image: url('images/money.jpg');"></div>
+      <div class="content">
+        <h3>Як планувати бюджет ефективно</h3>
+        <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
+        <a href="byudzhet.html">Читати</a>
+      </div>
+    </div>
 
-      <!-- 2 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=800&q=80');"></div>
-        <div class="content">
-          <h3>Як планувати бюджет ефективно</h3>
-          <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
-          <a href="article2.html">Читати</a>
-        </div>
-      </article>
+    <!-- 3 -->
+    <div class="card">
+      <div class="media" style="background-image: url('images/invest.jpg');"></div>
+      <div class="content">
+        <h3>Інвестування для початківців</h3>
+        <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
+        <a href="invest.html">Читати</a>
+      </div>
+    </div>
 
-      <!-- 3 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=800&q=80');"></div>
-        <div class="content">
-          <h3>Інвестування для початківців</h3>
-          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
-          <a href="article3.html">Читати</a>
-        </div>
-      </article>
+    <!-- 4 -->
+    <div class="card">
+      <div class="media" style="background-image: url('images/money2.jpg');"></div>
+      <div class="content">
+        <h3>Фінансова подушка</h3>
+        <p>Стратегія фінансового захисту для будь-кого.</p>
+        <a href="podushka.html">Читати</a>
+      </div>
+    </div>
 
-      <!-- 4 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1567427013830-8af3e4e3d4d2?auto=format&fit=crop&w=800&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова подушка</h3>
-          <p>Стратегія фінансового захисту для будь-кого.</p>
-          <a href="article4.html">Читати</a>
-        </div>
-      </article>
+    <!-- 5 -->
+    <div class="card">
+      <div class="media" style="background-image: url('images/savings.jpg');"></div>
+      <div class="content">
+        <h3>Топ поради для економії грошей</h3>
+        <p>Лайфхаки, як економити і не втрачати якість життя.</p>
+        <a href="economiya.html">Читати</a>
+      </div>
+    </div>
+  </section>
 
-      <!-- 5 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1580519542036-c47de6196ba5?auto=format&fit=crop&w=800&q=80');"></div>
-        <div class="content">
-          <h3>Топ поради для економії грошей</h3>
-          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
-          <a href="article5.html">Читати</a>
-        </div>
-      </article>
-
-    </section>
-  </main>
 </body>
 </html>
