--- a/index.html
+++ b/index.html
@@ -7,65 +7,63 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="wrap">
+    <header class="hero">
+      <h1>Фінансовий блог</h1>
+      <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+    </header>
 
-  <!-- Заголовок -->
-  <section class="hero">
-    <h1>Фінансовий блог</h1>
-    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-  </section>
-
-  <!-- Картки -->
-  <section class="cards">
-    <!-- 1 -->
-    <div class="card">
-      <div class="media" style="background-image: url('images/finance.jpg');"></div>
-      <div class="content">
-        <h3>Фінансова грамотність</h3>
-        <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-        <a href="fin-gramotnist.html">Читати</a>
+    <section class="cards">
+      <!-- Картка 1 -->
+      <div class="card">
+        <div class="media" style="background-image: url('images/finance.jpg');"></div>
+        <div class="content">
+          <h3>Фінансова грамотність</h3>
+          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+          <a href="#">Читати</a>
+        </div>
       </div>
-    </div>
 
-    <!-- 2 -->
-    <div class="card">
-      <div class="media" style="background-image: url('images/money.jpg');"></div>
-      <div class="content">
-        <h3>Як планувати бюджет ефективно</h3>
-        <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
-        <a href="byudzhet.html">Читати</a>
+      <!-- Картка 2 -->
+      <div class="card">
+        <div class="media" style="background-image: url('images/budget.jpg');"></div>
+        <div class="content">
+          <h3>Як планувати бюджет ефективно</h3>
+          <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
+          <a href="#">Читати</a>
+        </div>
       </div>
-    </div>
 
-    <!-- 3 -->
-    <div class="card">
-      <div class="media" style="background-image: url('images/invest.jpg');"></div>
-      <div class="content">
-        <h3>Інвестування для початківців</h3>
-        <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
-        <a href="invest.html">Читати</a>
+      <!-- Картка 3 -->
+      <div class="card">
+        <div class="media" style="background-image: url('images/invest.jpg');"></div>
+        <div class="content">
+          <h3>Інвестування для початківців</h3>
+          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
+          <a href="#">Читати</a>
+        </div>
       </div>
-    </div>
 
-    <!-- 4 -->
-    <div class="card">
-      <div class="media" style="background-image: url('images/money2.jpg');"></div>
-      <div class="content">
-        <h3>Фінансова подушка</h3>
-        <p>Стратегія фінансового захисту для будь-кого.</p>
-        <a href="podushka.html">Читати</a>
+      <!-- Картка 4 -->
+      <div class="card">
+        <div class="media" style="background-image: url('images/cash.jpg');"></div>
+        <div class="content">
+          <h3>Фінансова подушка</h3>
+          <p>Стратегія фінансового захисту для будь-кого.</p>
+          <a href="#">Читати</a>
+        </div>
       </div>
-    </div>
 
-    <!-- 5 -->
-    <div class="card">
-      <div class="media" style="background-image: url('images/savings.jpg');"></div>
-      <div class="content">
-        <h3>Топ поради для економії грошей</h3>
-        <p>Лайфхаки, як економити і не втрачати якість життя.</p>
-        <a href="economiya.html">Читати</a>
+      <!-- Картка 5 -->
+      <div class="card">
+        <div class="media" style="background-image: url('images/savings.jpg');"></div>
+        <div class="content">
+          <h3>Топ поради для економії грошей</h3>
+          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
+          <a href="#">Читати</a>
+        </div>
       </div>
-    </div>
-  </section>
-
+    </section>
+  </div>
 </body>
 </html>
