--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Фінансовий блог</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -14,55 +14,55 @@
     </header>
 
     <section class="cards">
-      <!-- Картка 1 -->
-      <div class="card">
-        <div class="media" style="background-image: url('images/finance.jpg');"></div>
+      <!-- 1 -->
+      <article class="card">
+        <img class="media" src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80" alt="Фінансова грамотність">
         <div class="content">
           <h3>Фінансова грамотність</h3>
           <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-          <a href="#">Читати</a>
+          <a href="article1.html">Читати</a>
         </div>
-      </div>
+      </article>
 
-      <!-- Картка 2 -->
-      <div class="card">
-        <div class="media" style="background-image: url('images/budget.jpg');"></div>
+      <!-- 2 -->
+      <article class="card">
+        <img class="media" src="https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80" alt="Планування бюджету">
         <div class="content">
           <h3>Як планувати бюджет ефективно</h3>
           <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
-          <a href="#">Читати</a>
+          <a href="article2.html">Читати</a>
         </div>
-      </div>
+      </article>
 
-      <!-- Картка 3 -->
-      <div class="card">
-        <div class="media" style="background-image: url('images/invest.jpg');"></div>
+      <!-- 3 -->
+      <article class="card">
+        <img class="media" src="https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80" alt="Інвестування для початківців">
         <div class="content">
           <h3>Інвестування для початківців</h3>
           <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
-          <a href="#">Читати</a>
+          <a href="article3.html">Читати</a>
         </div>
-      </div>
+      </article>
 
-      <!-- Картка 4 -->
-      <div class="card">
-        <div class="media" style="background-image: url('images/cash.jpg');"></div>
+      <!-- 4 -->
+      <article class="card">
+        <img class="media" src="https://images.unsplash.com/photo-1591696331119-85889d94b579?auto=format&fit=crop&w=1200&q=80" alt="Фінансова подушка">
         <div class="content">
           <h3>Фінансова подушка</h3>
           <p>Стратегія фінансового захисту для будь-кого.</p>
-          <a href="#">Читати</a>
+          <a href="article4.html">Читати</a>
         </div>
-      </div>
+      </article>
 
-      <!-- Картка 5 -->
-      <div class="card">
-        <div class="media" style="background-image: url('images/savings.jpg');"></div>
+      <!-- 5 -->
+      <article class="card">
+        <img class="media" src="https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png" alt="Економія грошей">
         <div class="content">
           <h3>Топ поради для економії грошей</h3>
           <p>Лайфхаки, як економити і не втрачати якість життя.</p>
-          <a href="#">Читати</a>
+          <a href="article5.html">Читати</a>
         </div>
-      </div>
+      </article>
     </section>
   </div>
 </body>
