--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Фінансовий блог</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="wrap">
-    <header class="hero">
-      <h1>Фінансовий блог</h1>
-      <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-    </header>
 
+  <!-- HERO -->
+  <header class="hero">
+    <h1>Фінансовий блог</h1>
+    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+  </header>
+
+  <main class="wrap">
     <section class="cards">
+
       <!-- 1 -->
       <article class="card">
-        <div class="media">
-          <img
-            src="images/finance.jpg"
-            alt="Фінансова грамотність"
-            onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1516542076529-1ea3854896e1?q=80&w=900&auto=format&fit=crop';"
-          />
-        </div>
+        <img class="thumb"
+             src="images/card1.jpg"
+             data-remote="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5"
+             alt="Фінансова грамотність" loading="lazy" />
         <div class="content">
           <h3>Фінансова грамотність</h3>
-          <p>Розберіться, як працюють гроші, щоб жити впевнено.</p>
+          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
           <a class="btn" href="article1.html">Читати</a>
         </div>
       </article>
 
       <!-- 2 -->
       <article class="card">
-        <div class="media">
-          <img
-            src="images/budget.jpg"
-            alt="Планування бюджету"
-            onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?q=80&w=900&auto=format&fit=crop';"
-          />
-        </div>
+        <img class="thumb"
+             src="images/card2.jpg"
+             data-remote="https://images.unsplash.com/photo-1553729459-efe14ef6055d"
+             alt="Як планувати бюджет ефективно" loading="lazy" />
         <div class="content">
           <h3>Як планувати бюджет ефективно</h3>
           <p>Правильний розподіл витрат та фіндисципліна.</p>
@@ -48,29 +45,23 @@
 
       <!-- 3 -->
       <article class="card">
-        <div class="media">
-          <img
-            src="images/invest.jpg"
-            alt="Інвестування для початківців"
-            onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1553729459-efe14ef6055d?q=80&w=900&auto=format&fit=crop';"
-          />
-        </div>
+        <img class="thumb"
+             src="images/card3.jpg"
+             data-remote="https://images.unsplash.com/photo-1581092795360-fd1ca04f0952"
+             alt="Інвестування для початківців" loading="lazy" />
         <div class="content">
           <h3>Інвестування для початківців</h3>
-          <p>Почніть інвестувати без великих ризиків.</p>
+          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
           <a class="btn" href="article3.html">Читати</a>
         </div>
       </article>
 
-      <!-- 4 (нижній ряд, трохи більша) -->
-      <article class="card card--lg">
-        <div class="media">
-          <img
-            src="images/pillow.jpg"
-            alt="Фінансова подушка"
-            onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?q=80&w=900&auto=format&fit=crop';"
-          />
-        </div>
+      <!-- 4 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card4.jpg"
+             data-remote="https://images.unsplash.com/photo-1567427013953-1d13d0b6c140"
+             alt="Фінансова подушка" loading="lazy" />
         <div class="content">
           <h3>Фінансова подушка</h3>
           <p>Стратегія фінансового захисту для будь-кого.</p>
@@ -78,22 +69,32 @@
         </div>
       </article>
 
-      <!-- 5 (нижній ряд, трохи більша) -->
-      <article class="card card--lg">
-        <div class="media">
-          <img
-            src="images/saving.jpg"
-            alt="Економія грошей"
-            onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1604881980920-8e8a5d1a29d7?q=80&w=900&auto=format&fit=crop';"
-          />
-        </div>
+      <!-- 5 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card5.jpg"
+             data-remote="https://images.unsplash.com/photo-1584438784894-089d6a62b8fa"
+             alt="Топ поради для економії грошей" loading="lazy" />
         <div class="content">
           <h3>Топ поради для економії грошей</h3>
-          <p>Лайфхаки, як економити без втрати якості життя.</p>
+          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
           <a class="btn" href="article5.html">Читати</a>
         </div>
       </article>
+
     </section>
   </main>
+
+  <!-- Fallback для картинок: якщо локального файла нема/помилка — підставляємо надійний remote -->
+  <script>
+    document.querySelectorAll('img.thumb[data-remote]').forEach(img => {
+      img.addEventListener('error', function onErr() {
+        if (img.dataset.remote && img.src.indexOf(img.dataset.remote) === -1) {
+          img.src = img.dataset.remote + "?auto=format&fit=crop&w=800&q=70";
+        }
+        img.removeEventListener('error', onErr);
+      }, { once: true });
+    });
+  </script>
 </body>
 </html>
