--- a/index.html
+++ b/index.html
@@ -1,56 +1,100 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Фінансовий блог</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Фінансовий блог</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Фінансовий блог</h1>
-        <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-    </header>
 
-    <main class="cards-container">
-        <div class="card">
-            <img src="images/money1.jpg" alt="Фінансова грамотність">
-            <h3>Фінансова грамотність</h3>
-            <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-            <a href="article1.html" class="btn">Читати</a>
+  <!-- HERO -->
+  <header class="hero">
+    <h1>Фінансовий блог</h1>
+    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+  </header>
+
+  <main class="wrap">
+    <section class="cards">
+
+      <!-- 1 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card1.jpg"
+             data-remote="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5"
+             alt="Фінансова грамотність" loading="lazy" />
+        <div class="content">
+          <h3>Фінансова грамотність</h3>
+          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+          <a class="btn" href="article1.html">Читати</a>
         </div>
+      </article>
 
-        <div class="card">
-            <img src="images/money2.jpg" alt="Як планувати бюджет ефективно">
-            <h3>Як планувати бюджет ефективно</h3>
-            <p>Правильний розподіл витрат та фіндисципліна.</p>
-            <a href="article2.html" class="btn">Читати</a>
+      <!-- 2 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card2.jpg"
+             data-remote="https://images.unsplash.com/photo-1553729459-efe14ef6055d"
+             alt="Як планувати бюджет ефективно" loading="lazy" />
+        <div class="content">
+          <h3>Як планувати бюджет ефективно</h3>
+          <p>Правильний розподіл витрат та фіндисципліна.</p>
+          <a class="btn" href="article2.html">Читати</a>
         </div>
+      </article>
 
-        <div class="card">
-            <img src="images/money3.jpg" alt="Інвестування для початківців">
-            <h3>Інвестування для початківців</h3>
-            <p>Почніть інвестувати без великих ризиків.</p>
-            <a href="article3.html" class="btn">Читати</a>
+      <!-- 3 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card3.jpg"
+             data-remote="https://images.unsplash.com/photo-1581092795360-fd1ca04f0952"
+             alt="Інвестування для початківців" loading="lazy" />
+        <div class="content">
+          <h3>Інвестування для початківців</h3>
+          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
+          <a class="btn" href="article3.html">Читати</a>
         </div>
+      </article>
 
-        <div class="card">
-            <img src="https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png" alt="Фінансова подушка">
-            <h3>Фінансова подушка</h3>
-            <p>Стратегія фінансового захисту для будь-кого.</p>
-            <a href="article4.html" class="btn">Читати</a>
+      <!-- 4 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card4.jpg"
+             data-remote="https://images.unsplash.com/photo-1567427013953-1d13d0b6c140"
+             alt="Фінансова подушка" loading="lazy" />
+        <div class="content">
+          <h3>Фінансова подушка</h3>
+          <p>Стратегія фінансового захисту для будь-кого.</p>
+          <a class="btn" href="article4.html">Читати</a>
         </div>
+      </article>
 
-        <div class="card">
-            <img src="images/money5.jpg" alt="Топ поради для економії грошей">
-            <h3>Топ поради для економії грошей</h3>
-            <p>Лайфхаки, як економити без втрати якості життя.</p>
-            <a href="article5.html" class="btn">Читати</a>
+      <!-- 5 -->
+      <article class="card">
+        <img class="thumb"
+             src="images/card5.jpg"
+             data-remote="https://images.unsplash.com/photo-1584438784894-089d6a62b8fa"
+             alt="Топ поради для економії грошей" loading="lazy" />
+        <div class="content">
+          <h3>Топ поради для економії грошей</h3>
+          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
+          <a class="btn" href="article5.html">Читати</a>
         </div>
-    </main>
+      </article>
 
-    <footer>
-        <p>hnidets523.github.io</p>
-    </footer>
+    </section>
+  </main>
+
+  <!-- Fallback для картинок: якщо локального файла нема/помилка — підставляємо надійний remote -->
+  <script>
+    document.querySelectorAll('img.thumb[data-remote]').forEach(img => {
+      img.addEventListener('error', function onErr() {
+        if (img.dataset.remote && img.src.indexOf(img.dataset.remote) === -1) {
+          img.src = img.dataset.remote + "?auto=format&fit=crop&w=800&q=70";
+        }
+        img.removeEventListener('error', onErr);
+      }, { once: true });
+    });
+  </script>
 </body>
 </html>
