--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- 4 -->
       <article class="card">
         <img class="thumb"
-             src="images/card4.jpg"
+             src="https://raw.githubusercontent.com/Hnidets523/My-finance-/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png"
              data-remote="https://images.unsplash.com/photo-1567427013953-1d13d0b6c140"
              alt="Фінансова подушка" loading="lazy" />
         <div class="content">
@@ -85,7 +85,7 @@
     </section>
   </main>
 
-  <!-- Fallback для картинок: якщо локального файла нема/помилка — підставляємо надійний remote -->
+  <!-- Fallback для картинок -->
   <script>
     document.querySelectorAll('img.thumb[data-remote]').forEach(img => {
       img.addEventListener('error', function onErr() {
