--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <header class="hero">
     <h1>Фінансовий блог</h1>
     <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+    <a href="#cards" class="hero-btn">Дізнатись більше</a>
   </header>
 
-  <main class="wrap">
+  <main class="wrap" id="cards">
     <section class="cards">
 
       <!-- 1 -->
